# godot-box3d

./: .gitignore  CHANGELOG_PORT.md  CMakeLists.txt  MOBILE_WEB_INTEGRATION.md  PORT_STATUS.md  README.md  SConstruct  THIRD_PARTY_NOTICES.md  VALIDATION_REPORT.md  WEB_QUICKSTART.md  godot-box3d.gdextension  godot_cpp_build_profile.json
.github/workflows/: build.yml  headless-tests.yml  ios.yml  portable-release.yml
cmake/: GodotBox3DExternalGodotCpp.cmake
scripts/: _common.sh  bootstrap_dependencies.sh  build_android.sh  build_ios.sh  build_portable.sh  build_web.sh  build_web_templates.sh  package_addon.py  package_source_archive.py  quickstart_web.sh  run_headless_tests.sh  run_web_smoke.py  serve_web_export.py  setup_android_toolchain.sh  setup_python_build_env.sh  setup_web_toolchain.sh  verify_port.py
src/: register_types.cpp
src/joints/: box3d_cone_twist_joint_impl_3d.cpp  box3d_cone_twist_joint_impl_3d.hpp  box3d_joint_impl_3d.hpp
src/misc/: box3d_pair_exceptions_3d.cpp  box3d_pair_exceptions_3d.hpp  box3d_recording_3d.cpp  box3d_recording_3d.hpp  box3d_shape_proxy.cpp
src/objects/: box3d_body_impl_3d.cpp  box3d_body_impl_3d.hpp  box3d_physics_direct_body_state_3d.cpp  box3d_shaped_object_impl_3d.cpp  box3d_shaped_object_impl_3d.hpp
src/servers/: box3d_physics_server_3d.cpp  box3d_physics_server_3d.hpp
src/shapes/: box3d_concave_polygon_shape_impl_3d.cpp  box3d_convex_polygon_shape_impl_3d.cpp  box3d_cylinder_shape_impl_3d.cpp  box3d_cylinder_shape_impl_3d.hpp
src/spaces/: box3d_physics_direct_space_state_3d.cpp  box3d_physics_direct_space_state_3d.hpp  box3d_space_3d.cpp  box3d_space_3d.hpp
test_project/: .lastrun  area_test.gd  backend_activation_test.gd  backend_activation_test.gd.uid  bridge_test.gd  bridge_test.gd.uid  collision_filter_test.gd  crowd_bench.gd  crowd_bench.gd.uid  csg_test.gd  csg_test.gd.uid  custom_integrator_test.gd  custom_integrator_test.gd.uid  cylinder_test.gd  cylinder_test.gd.uid  default_area_test.gd  default_area_test.gd.uid  demo_scene.gd  demo_scene.tscn  export_presets.cfg  fall_test.gd  gpget-gui.py  gravity_test.gd  gravity_test.gd.uid  import_pipeline_test.gd  import_pipeline_test.gd.uid  joint_test.gd  layers_test.gd  layers_test.gd.uid  physics_contract_test.gd  physics_contract_test.gd.uid  portable_smoke_test.gd  portable_smoke_test.gd.uid  portable_smoke_test.tscn  project.godot  ray_pickability_test.gd  ray_pickability_test.gd.uid  review_regression_test.gd.uid  settle_test.gd  slope_test.gd  (+4 more)
test_project/addons/godot-box3d/: godot-box3d.gdextension  godot-box3d.gdextension.uid
